@@ -1,9 +1,6 @@
-This lists only the changes for the current release (v1.12) over the last
+This lists only the changes for the current release (v1.14) over the last
 version, since HISTORY is now quite big:
 
-* fixed bzero() for $x->bzero() case (Math::String::bzero() did work)
-* added bnan() and binf()
-* there were no tests for bzero(), bnan() and binf()
-* fixed bug in from_number() that did not copy all values form BigInt (due to
-  new Math::BigInt::Calc $x->{value} might not be an ARRAY any longer)
+* bstr() was not caching the result, missing speedups
+* some more tests and some small nits
 
